Fix NavMenu toggle not displaying on mobile in dark mode

--- a/examples/Demo/Shared/wwwroot/css/site.css
+++ b/examples/Demo/Shared/wwwroot/css/site.css
@@ -281,17 +281,18 @@ code {
 
     #navmenu-toggle {
         appearance: none;
+    }
+
+    .navmenu-icon {
         cursor: pointer;
         z-index: 10;
         display: block;
-        visibility: visible;
         position: absolute;
         top: 15px;
         right: 20px;
         width: 20px;
         height: 20px;
         border: none;
-        background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' class='image' style='width: 20px; fill: var(--neutral-fill-rest);' focusable='false' viewBox='0 0 20 20' aria-hidden='true'%3E%3Cpath d='M2 4.5c0-.28.22-.5.5-.5h15a.5.5 0 0 1 0 1h-15a.5.5 0 0 1-.5-.5Zm0 5c0-.28.22-.5.5-.5h15a.5.5 0 0 1 0 1h-15a.5.5 0 0 1-.5-.5Zm.5 4.5a.5.5 0 0 0 0 1h15a.5.5 0 0 0 0-1h-15Z'%3E%3C/path%3E%3C/svg%3E");
     }
 
     #navmenu-toggle ~ nav {
@@ -300,9 +301,6 @@ code {
 
     #navmenu-toggle:checked ~ nav {
         display: block;
-        
-
-        
     }
 
     #navmenu-toggle ~ article {
